--- a/app/src/main/res/drawable/bg_dialog.xml
+++ b/app/src/main/res/drawable/bg_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorAccent" />
-    <corners android:radius="30dp" />
+    <solid android:color="@color/colorDialogBackground" />
+    <corners android:radius="10dp" />
     <padding
         android:bottom="10dp"
         android:left="10dp"
