--- a/app/src/main/res/layout/dialog_entry_add.xml
+++ b/app/src/main/res/layout/dialog_entry_add.xml
@@ -4,14 +4,13 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/dialog_background"
+    android:background="@drawable/bg_dialog"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/dialog_entry_add_tv_msg_entry_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:text="@string/tv_msg_entry_add_header"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -56,10 +55,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorActiveButtonBackground"
         android:foreground="@drawable/ripple_primary"
         android:text="@string/btn_text_add"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorActiveButtonText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dialog_entry_add_et_comment" />
 
