--- a/app/src/main/res/layout/dialog_person_del.xml
+++ b/app/src/main/res/layout/dialog_person_del.xml
@@ -4,7 +4,7 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/dialog_background"
+    android:background="@drawable/bg_dialog"
     android:padding="10dp">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="10dp"
+
         android:text="@string/tv_msg_person_del_header"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -27,7 +27,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:text="@string/tv_msg_del_fill"
         android:textColor="@color/colorMsgFillText"
@@ -42,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorActiveButtonBackground"
         android:foreground="@drawable/ripple_red"
         android:text="@string/btn_text_del"
         android:textColor="@color/colorRed"
@@ -55,8 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="4dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorActiveButtonBackground"
         android:foreground="@drawable/ripple_blue"
         android:text="@string/btn_text_cancel"
         android:textColor="@color/colorBlue"
