--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -3,9 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:gravity="center"
-    android:background="@color/colorAccent"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_app"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/colorPrimary"
+        android:contentDescription="@string/iv_desc_app_name"
+        android:src="@drawable/ic_app" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -37,8 +46,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
-                android:textAllCaps="true"
                 android:text="@string/tv_created"
+                android:textAllCaps="true"
+                android:textColor="@color/colorMsgFillText"
                 android:textSize="36sp" />
 
             <LinearLayout
@@ -52,6 +62,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_created_in"
+                    android:textColor="@color/colorMsgFillText"
                     android:textSize="12sp" />
 
                 <TextView
@@ -59,6 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_created_by"
+                    android:textColor="@color/colorMsgFillText"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -71,6 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/tv_vcs"
+            android:textColor="@color/colorMsgFillText"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_version"
+                android:textColor="@color/colorMsgFillText"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@id/fragment_info_tv_app_version"
                 app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_app_version"
+                android:textColor="@color/colorMsgFillText"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/fragment_info_tv_version"
