--- a/app/src/main/res/layout/item_view_entry.xml
+++ b/app/src/main/res/layout/item_view_entry.xml
@@ -22,7 +22,7 @@
             android:contentDescription="@string/iv_desc_entry_swipe_item"
             android:gravity="center"
             android:padding="20dp"
-            android:src="@drawable/ic_edit" />
+            android:src="@drawable/ic_swipe_edit" />
 
         <ImageView
             android:id="@+id/item_entry_iv_del"
@@ -32,7 +32,7 @@
             android:contentDescription="@string/iv_desc_entry_swipe_item"
             android:gravity="center"
             android:padding="20dp"
-            android:src="@drawable/ic_delete" />
+            android:src="@drawable/ic_swipe_delete" />
 
     </LinearLayout>
 
