--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     // Dark Theme
-    <color name="colorPrimary">#1F2122</color>
+    <color name="colorPrimary">#0C0C0C</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#504A4A</color>
+    <color name="colorAccent">#3386DA</color>
+    <color name="colorBackground">#6A6262</color>
+    <color name="colorLauncherBackground">#6A6262</color>
+    <color name="colorDialogBackground">#6A6262</color>
 
-    <color name="colorText">#3989DA</color>
-    <color name="colorItemAmountText">#636363</color>
+    <color name="colorText">#2D87E3</color>
+    <color name="colorItemAmountText">#3F93E8</color>
     <color name="colorInactiveText">#BEBEBE</color>
-    <color name="colorActiveText">@color/colorPrimary</color>
+    <color name="colorActiveText">#2D87E3</color>
+    <color name="colorMsgHeaderText">#FDFDFD</color>
+    <color name="colorMsgFillText">#B6B6B6</color>
 
-    <color name="colorActiveButtonBackground">@color/colorPrimary</color>
-    <color name="colorActiveButtonText">#FFFEFE</color>
+    <color name="colorActiveButtonBackground">#6A6262</color>
+    <color name="colorActiveButtonText">#0C0C0C</color>
     <color name="colorActiveButtonBackgroundPressed">#000000</color>
     <color name="colorInactiveButtonBackground">#BEBFBF</color>
     <color name="colorInactiveButtonText">#2E2929</color>
 
+    <color name="colorIcons">#3386DA</color>
+    <color name="colorIconDebtInc">#5AA540</color>
+    <color name="colorIconDebtDec">#BF443A</color>
+    <color name="colorIconSettings">#0A0A0B</color>
 
     // Default Colors
-    <color name="launcher_background">#0AACBF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#DFDFDF</color>
     <color name="colorLightGray">#E2E2E2</color>
-    <color name="colorRed">#F44336</color>
+    <color name="colorRed">#C12A1F</color>
+    <color name="colorOrange">#E48901</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorGreen">#62CA66</color>
-    <color name="colorBlue">#1483DC</color>
+    <color name="colorGreen">#5BB65F</color>
+    <color name="colorBlue">#1482DA</color>
 </resources>
