--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,27 +5,33 @@
     <color name="colorPrimaryDark">#067987</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorBackground">#E2E2E2</color>
+    <color name="colorLauncherBackground">#FFFFFF</color>
+    <color name="colorDialogBackground">#FFFFFF</color>
 
     <color name="colorText">#FFFFFF</color>
     <color name="colorItemAmountText">#636363</color>
     <color name="colorInactiveText">#BEBEBE</color>
     <color name="colorActiveText">@color/colorPrimary</color>
-    <color name="colorMsgFillText">#919191</color>
+    <color name="colorMsgHeaderText">#018A9A</color>
+    <color name="colorMsgFillText">#707070</color>
 
-    <color name="colorActiveButtonBackground">@color/colorPrimary</color>
-    <color name="colorActiveButtonText">@color/colorAccent</color>
+    <color name="colorActiveButtonBackground">#FFFFFF</color>
+    <color name="colorActiveButtonText">@color/colorPrimary</color>
     <color name="colorActiveButtonBackgroundPressed">#027F8E</color>
     <color name="colorInactiveButtonBackground">#BEBFBF</color>
     <color name="colorInactiveButtonText">#2E2929</color>
 
+    <color name="colorIcons">#018A9A</color>
+    <color name="colorIconDebtInc">#62CA66</color>
+    <color name="colorIconDebtDec">#F44336</color>
+    <color name="colorIconSettings">#018A9A</color>
 
     // Default Colors
-    <color name="launcher_background">#0AACBF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#DFDFDF</color>
     <color name="colorLightGray">#E2E2E2</color>
     <color name="colorRed">#F44336</color>
-    <color name="colorOrange">#FFC107</color>
+    <color name="colorOrange">#E48901</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGreen">#62CA66</color>
     <color name="colorBlue">#1483DC</color>
