--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorLauncherBackground"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".ActivityLaunch"
-    android:background="@color/colorBackground"
     tools:ignore="UseCompoundDrawables">
 
     <ImageView
