--- a/app/src/main/res/layout/dialog_entry_upd.xml
+++ b/app/src/main/res/layout/dialog_entry_upd.xml
@@ -30,6 +30,7 @@
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
         android:maxLength="6"
+        android:textCursorDrawable="@drawable/sp_cursor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +45,7 @@
         android:importantForAutofill="no"
         android:inputType="text"
         android:maxLength="30"
+        android:textCursorDrawable="@drawable/sp_cursor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
