--- a/app/src/main/res/layout/item_view_entry.xml
+++ b/app/src/main/res/layout/item_view_entry.xml
@@ -39,7 +39,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
+        android:id="@+id/item_view_entry_cl"
         android:padding="10dp">
 
         <ImageView
