--- a/app/src/main/res/layout/dialog_person_add.xml
+++ b/app/src/main/res/layout/dialog_person_add.xml
@@ -32,6 +32,7 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:maxLength="15"
+        android:textCursorDrawable="@drawable/sp_cursor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
