--- a/app/src/main/res/layout/dialog_person_upd.xml
+++ b/app/src/main/res/layout/dialog_person_upd.xml
@@ -31,6 +31,7 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:maxLength="15"
+        android:textCursorDrawable="@drawable/sp_cursor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
