--- a/app/src/main/res/layout/dialog_entry_upd.xml
+++ b/app/src/main/res/layout/dialog_entry_upd.xml
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content"
         android:text="@string/tv_msg_entry_upd_header"
         android:textAlignment="center"
+        android:layout_marginStart="10dp"
         android:textAllCaps="true"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorDialogHeaderText"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
