--- a/app/src/main/res/layout/dialog_person_add.xml
+++ b/app/src/main/res/layout/dialog_person_add.xml
@@ -15,8 +15,9 @@
         android:layout_gravity="center"
         android:text="@string/tv_msg_person_add_header"
         android:textAlignment="center"
+        android:layout_marginStart="10dp"
         android:textAllCaps="true"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorDialogHeaderText"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
