--- a/app/src/main/res/layout/dialog_person_del.xml
+++ b/app/src/main/res/layout/dialog_person_del.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-
+        android:layout_marginStart="10dp"
         android:text="@string/tv_msg_person_del_header"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorDialogHeaderText"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
